Fixed the whitespace above footer

--- a/public/hw3/vanilla/css/main.css
+++ b/public/hw3/vanilla/css/main.css
@@ -3,21 +3,20 @@
 main {
     background-color: white;
     padding-left: 230px;
-    height: 100%;
+
 }
 
 .flex-container {
-    
-    display: -webkit-flex;
+    margin: 0;
+    display: -webkit-flex; /* not sure what this is, will get rid of it soon */
     display: flex;
     width: 100%;
-    position: relative;
-    height: 100%;
-    min-height: 100vh;
-    background: linear-gradient(to top, rgba(255, 255, 255,1) 0%, rgba(110,255,183,1) 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255,1) 0%, rgba(110,255,183,1) 100%);
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 10px;
+    height: 100%;
+    min-height: 100vh;
 }
 
 .flex-img-container-lg {
